style: fix bg image in card z-index

--- a/styles.css
+++ b/styles.css
@@ -476,7 +476,7 @@ section.request .request-options.row {
   object-position: center;
   width: 100%;
   height: 100%;
-  z-index: 100;
+  z-index: 0;
 }
 
 .request-options .card > .info {
